<resources>
    <string name="app_name">This is final project</string>
    <string name="title_activity_maps">Map</string>
    <string name="TextView">Class Time</string>
    <string name="Enter">Enter classes</string>
    <string name="txtNumber">hi</string>
    <string name="Name">Name of Class</string>
    <string name="Address">Street Address</string>
    <string name="Address2">City</string>
    <string name="Address3">State</string>
    <string name="Address4">Zip Code</string>
    <string name="days">Days of the Week</string>
    <string name="button">Add Another Class</string>
    <string name="button2">Finish</string>
    <string name="time">Time</string>
    <color name="white">#FFFFFF</color>
    <string name="addClass">addClass</string>
    <string-array name="time">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="time2">
        <item>05</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
        <item>00</item>
    </string-array>
    <string-array name="time3">
        <item>AM</item>
        <item>PM</item>
    </string-array>
    <string-array name="daysSpinner">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Monday and Wednesday</item>
        <item>Monday, Wednesday, Friday</item>
        <item>Tuesday and Thursday</item>
    </string-array>

</resources>
