<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">



<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp"
    android:background="@color/white"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".FormActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:background="@color/white"
        android:layout_marginTop="45sp"
        android:shadowColor="#7F000000"
        android:text="@string/Enter"
        android:textSize="35sp"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/Name"
                android:background="@color/white"

                android:hint="@string/Name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:layout_marginBottom="20dp"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
            android:id="@+id/Address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/Address"
            android:hint="@string/Address"
            android:importantForAutofill="no"
            android:inputType="text"
            android:layout_marginBottom="20dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Address2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/Address2"
                android:hint="@string/Address2"
                android:importantForAutofill="no"
                android:inputType="text"
                android:layout_marginBottom="20dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Address3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/Address3"
                android:hint="@string/Address3"
                android:importantForAutofill="no"
                android:inputType="text"
                android:layout_marginBottom="20dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Address4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/Address4"
                android:hint="@string/Address4"
                android:importantForAutofill="no"
                android:inputType="text"
                android:layout_marginBottom="20dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/days"
                android:hint="@string/days"
                android:importantForAutofill="no"
                android:inputType="text"
                android:layout_marginBottom="20dp"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/daysSpinner"
                android:layout_weight="1"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="370dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/TextView" />
            <Spinner
                android:id="@+id/spinner"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addClass"

            android:hint="@string/button"
            android:textColor="@color/colorPrimary"
            android:onClick="addClass"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonFinish"
            android:hint="@string/button2"
            android:textColor="@color/colorPrimary"
            android:onClick="buttonFinish"/>


    </LinearLayout>






</RelativeLayout>
</ScrollView>